# kvdb

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.yaml  justfile
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  publish.yml
benches/: commands.rs
docs/: DESIGN.md  IMPLEMENTATION_PLAN.md  M9_LIST_PLAN.md  REDIS_ANALYSIS.md  RUST_ECOSYSTEM_GUIDE.md  TESTING_ROADMAP.md  fdb_research.md  m5-implementation-plan.md  m5-key-management-ttl-design.md
docs/superpowers/plans/: 2026-04-09-m4-string-commands.md  2026-04-09-unified-smoke-test.md
docs/superpowers/specs/: 2026-04-09-m4-string-commands-design.md  2026-04-09-unified-smoke-test-design.md
examples/: loadgen.rs  smoke.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: command_dispatch.rs  fuzz_types.rs  resp_encoder.rs  resp_multi_frame.rs  resp_parser.rs  resp_roundtrip.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/commands/: hashes.rs  keys.rs  lists.rs  mod.rs  pubsub.rs  registry.rs  server.rs  sets.rs  sorted_sets.rs  strings.rs  transaction.rs  util.rs
src/observability/: metrics.rs  mod.rs  tracing_init.rs
src/protocol/: encoder.rs  mod.rs  parser.rs  types.rs
src/pubsub/: cleanup.rs  mod.rs  pattern.rs  subscriber.rs
src/server/: clients.rs  connection.rs  listener.rs  mod.rs  server_state.rs  slowlog.rs
src/storage/: chunking.rs  database.rs  directories.rs  helpers.rs  meta.rs  mod.rs  namespace.rs  transaction.rs
src/ttl/: mod.rs  worker.rs
tests/: accept_admin.rs  accept_hashes.proptest-regressions  accept_hashes.rs  accept_keys.rs  accept_lists.proptest-regressions  accept_lists.rs  accept_protocol.proptest-regressions  accept_protocol.rs  accept_pubsub.rs  accept_sets.proptest-regressions  accept_sets.rs  accept_sorted_sets.proptest-regressions  accept_sorted_sets.rs  accept_storage.rs  accept_strings.proptest-regressions  accept_strings.rs  hashes.rs  keys.rs  lists.rs  pubsub.rs  server.rs  server_admin.rs  sets.rs  sorted_sets.rs  storage.rs  strings.rs  transactions.rs
tests/accept/: mod.rs
tests/harness/: mod.rs
tests/integration/: mod.rs
