[package]
name = "kvdb"
version = "0.1.0"
edition = "2024"
description = "Redis-compatible database on FoundationDB"
license = "MIT"

[features]
default = []
# Tracy profiler integration. Opt-in only — compiles tracy-client-sys (C++).
# Usage: cargo run --features tracy -- --tracy
tracy = ["dep:tracing-tracy"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
bytes = "1"
memchr = "2"
itoa = "1"
ryu = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }

# Observability: tracing, metrics, profiling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = "0.31"
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1"
tracing-tracy = { version = "0.11", default-features = false, features = ["enable", "flush-on-exit"], optional = true }

# Async combinators
futures = "0.3"

# Random number generation (used by HRANDFIELD, SRANDMEMBER, etc.)
rand = "0.8"

# Concurrent hash map (used by pub/sub subscription registry)
dashmap = "6"

# Storage: FoundationDB client + serialization
foundationdb = { version = "0.10", features = ["fdb-7_3"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
tokio = { version = "1", features = ["full", "test-util"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
debug = true   # DWARF debug info in release builds — enables Tracy assembly view

[[bench]]
name = "commands"
harness = false
